--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lyrasearch/lyra",
-  "version": "0.4.4",
+  "version": "0.4.4-ayrton",
   "type": "module",
   "description": "Fast, in-memory, typo-tolerant, full-text search engine written in TypeScript",
   "sideEffects": false,
@@ -18,6 +18,10 @@
       "types": "./dist/internals.d.ts",
       "import": "./dist/internals.js",
       "require": "./dist/cjs/internals.cjs"
+    },
+    "./tokenizer/*": {
+      "types": "./dist/tokenizer/*.d.ts",
+      "import": "./dist/tokenizer/*.js"
     },
     "./stemmer/*": {
       "types": "./dist/stemmer/*.d.ts",
